--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     steps:
-      - uses: jspricke/ros-deb-builder-action@snapshots
+      - uses: jspricke/ros-deb-builder-action@main
         with:
           DEB_DISTRO: jammy
           ROS_DISTRO: humble
